# paper_expert

./: .gitignore  AGENTS.md  README.md  USER_GUIDE.md  campus_fetch.py  check_status.py  pyproject.toml  run_weekly_monitor.py  setup_watch.py
.opencode/rules/: project.md
.opencode/skills/paper_expert-adapters/: SKILL.md
.opencode/skills/paper_expert-architecture/: SKILL.md
.opencode/skills/paper_expert-classification/: SKILL.md
.opencode/skills/paper_expert-cli/: SKILL.md
.opencode/skills/paper_expert-config/: SKILL.md
.opencode/skills/paper_expert-database/: SKILL.md
.opencode/skills/paper_expert-domain/: SKILL.md
.opencode/skills/paper_expert-known-issues/: SKILL.md
paper_expert/: __init__.py  mcp_server.py
paper_expert/adapters/: __init__.py  arxiv.py  ieee.py  notify.py  openalex.py  paperqa.py  semantic_scholar.py
paper_expert/cli/: __init__.py  add.py  ask.py  campus.py  config.py  domain.py  expert.py  import_cmd.py  lib.py  monitor.py  read.py  review.py  search.py  suggest.py
paper_expert/core/: __init__.py  auto_fetch.py  campus_downloader.py  citations.py  classifier.py  config.py  database.py  direction_advisor.py  domain.py  domain_expert.py  library.py  llm.py  logging.py  monitor.py  pdf_fetcher.py  qa_engine.py  review_engine.py  search.py  vocabulary.py
paper_expert/importers/: __init__.py  bibtex.py  directory.py  zotero.py
paper_expert/models/: __init__.py  monitor.py  paper.py  qa.py  review.py
tests/: test_bibtex.py  test_classifier.py  test_database.py  test_qa.py  test_review.py
(+3 files in other folders)
